<?xml version="1.0"?>
<package format="2">
  <name>dji_guidance_sdk</name>
  <version>1.4.0</version>
  <description>The official Guidance SDK package for Windows, Ubuntu and XU3</description>

  <maintainer email="info@intermodalics.eu">Intermodalics BVBA</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>libusb-1.0-dev</exec_depend>

</package>
